# csi2372-project

./: .gitignore  CMakeLists.txt  card.cpp  card.h  cardFactory.cpp  cardFactory.h  chain.cpp  chain.h  csi2372-project.sln  csi2372-project.vcxproj  deck.cpp  deck.h  default.txt  discard_pile.cpp  discard_pile.h  gemstones.cpp  gemstones.h  hand.cpp  hand.h  main.cpp  player.cpp  player.h  players.cpp  players.h  table.cpp  table.h  trade_area.cpp  trade_area.h
